--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
             </div>
             <div class="marriage col-lg-4 col-md-6">
                 <h3>Marriages</h3>
-                <a href="marriages.html"><img src="./img/marriage-tile.jpg" alt="Marriages"></a>
+                <a href="marriages.html"><img src="./img/marriage-tile.JPG" alt="Marriages"></a>
             </div>
             <div class="others col-lg-4 col-md-12">
                 <h3>Other Events</h3>
