--- a/concerts.html
+++ b/concerts.html
@@ -126,8 +126,7 @@
                 <td><img src="./img/Clients/dflash.JPG" alt="De Flash Lounge"></td>
                 <td><img src="./img/Clients/tik-tok unplugged-01.png" alt="Tik-Tok Unplugged"></td>
                 <td><img src="./img/Clients/all white canvas-01.png" alt="All White Canvas Party"></td>
-                <td><img src="./img/logo.png" alt="PinPoint"></td>
-                <td><img src="./img/Clients/warri fashion lifestyle.JPG" alt="Warri Fashion Lifestyle Festival"></td>
+                <td><img src="./img/Clients/pinpoint.png" alt="PinPoint"></td>
               </tr>
             </tbody>
           </table>
