--- a/index.html
+++ b/index.html
@@ -137,6 +137,17 @@
       </div>
 
       <div class="copyright text-center col-lg-12">
+        <p class="popup" onclick="myFunction()">
+          Privacy Policy
+          <span class="popuptext" id="myPopup"
+            >Phone numbers, email address and other contact information maybe
+            collected on this website via our contact form and gather solely for
+            marketing purposes. We, through this privacy policy statement,
+            pledge to adhere strictly to protect client's right to privacy and
+            none of such information collected and gather on this website will
+            be share with third parties.</span
+          >
+        </p>
         <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
       </div>
     </footer>
