--- a/concerts.html
+++ b/concerts.html
@@ -193,13 +193,24 @@
             <p>lorem ipsum lorem ipsum lorem</p>
           </div>
   
-        <div class="copyright text-center col-lg-12">
-          <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
-        </div>
-      </footer>
-    </body>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="javascript/script.js"></script>
-  </html>
-  
+          <div class="copyright text-center col-lg-12">
+            <p class="popup" onclick="myFunction()">
+              Privacy Policy
+              <span class="popuptext" id="myPopup"
+                >Phone numbers, email address and other contact information maybe
+                collected on this website via our contact form and gather solely for
+                marketing purposes. We, through this privacy policy statement,
+                pledge to adhere strictly to protect client's right to privacy and
+                none of such information collected and gather on this website will
+                be share with third parties.</span
+              >
+            </p>
+            <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
+          </div>
+        </footer>
+      </body>
+      <script type="text/javascript" src="js/bootstrap.min.js"></script>
+      <script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
+      <script type="text/javascript" src="javascript/script.js"></script>
+    </html>
+    
