--- a/about.html
+++ b/about.html
@@ -9,27 +9,26 @@
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
     <link rel="icon" href="./img/logo.png" />
     <link rel="apple-touch-icon" href="./img/black_logo.png" />
-    <title>LMV Pro Lights || About Us</title>
+    <title>LMV Pro Lights || Lights, Camera, Action...</title>
   </head>
   <body>
     <header>
       <nav class="fixed-nav-bar">
-        <div class="text-center">
-          <a href="index.html"><img src="img/logo.png" alt="Home" /></a>
+        <div class="text-center" id="mobile-logo">
+          <a href="index.html"><img src="img/logo.png" alt="" /></a>
         </div>
-
         <div class="container">
           <ul class="nav-list">
             <li>
               <a href="services.html">Services</a>
               <ul class="dropdown">
-                <li><a href="#">Concerts</a></li>
-                <li><a href="#">Marraige Receptions</a></li>
-                <li><a href="#">Other Events</a></li>
+                <li><a href="concerts.html">Concerts</a></li>
+                <li><a href="marriages.html">Marraige Receptions</a></li>
+                <li><a href="others.html">Other Events</a></li>
               </ul>
             </li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li>
               <a href="#">Gallery</a>
               <ul class="dropdown">
@@ -48,7 +47,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
       <li><a href="#">Gallery</a></li>
     </nav>
 
@@ -86,32 +85,31 @@
 
       <table id="about" align="center" class="col-lg-12">
         <thead>
-          <tr>
-            <th id="mission" colspan="3">Our Vision</th>
-          </tr>
+          <!-- <tr>
+            <th colspan="3">
+              <img src="./img/black_logo.png" alt="Our Mission" />
+            </th>
+          </tr> -->
           <tr>
             <th id="mission">Our Mission</th>
-            <!-- <th id="vision" colspan="3">Our Values</th> -->
-            <th id="values" colspan="2">Our Values</th>
+            <th id="mission">Our Vision</th>
+            <th id="values">Our Values</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td rowspan="2">
+            <td>
               Here at <strong>LMV-PRO Lights</strong>, we provide innovative
               ideas that continually lead us to achieving unconventional designs
               that reach far beyond the predictable expectations in line any
               event brief!
             </td>
-            <td><img src="./img/black_logo.png" alt="Our Mission" /></td>
-            <td rowspan="2">
+            <td>
               Here at <strong>LMV-PRO Lights</strong>, we provide innovative
               ideas that continually lead us to achieving unconventional designs
               that reach far beyond the predictable expectations in line any
               event brief!
             </td>
-          </tr>
-          <tr>
             <td>
               Here at <strong>LMV-PRO Lights</strong>, we provide innovative
               ideas that continually lead us to achieving unconventional designs
@@ -133,7 +131,7 @@
             <td>
               <img
                 src="./img/2023_05_04_11_08_IMG_4997.JPG"
-                alt="Our Mission"
+                alt="Managing Director"
               />
             </td>
           </tr>
@@ -165,22 +163,16 @@
       <table id="team" align="center" class="col-lg-12">
         <thead>
           <tr>
-            <th id="mission" colspan="3">Our Team</th>
+            <th id="mission" colspan="4">Our Team</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td rowspan="2">
-              <img src="./img/IMG_3299.JPG" alt="Our Mission" />
-            </td>
-            <td><img src="./img/IMG_3298.JPG" alt="Our Mission" /></td>
-            <td rowspan="2">
-              <img src="./img/IMG_3299.JPG" alt="Our Mission" />
-            </td>
-          </tr>
-          <tr>
+            <td><img src="./img/IMG_3299.JPG" alt="Our Team" /></td>
+            <td><img src="./img/IMG_3298.JPG" alt="Our Team" /></td>
+            <td><img src="./img/IMG_3299.JPG" alt="Our Team" /></td>
             <td>
-              <img src="./img/IMG_3298.JPG" alt="Our Mission" />
+              <img src="./img/IMG_3298.JPG" alt="Our Team" />
             </td>
           </tr>
         </tbody>
@@ -255,12 +247,12 @@
         <p class="popup" onclick="myFunction()">
           Privacy Policy
           <span class="popuptext" id="myPopup"
-            >Phone numbers, email address and other contact information maybe
-            collected on this website via our contact form and gather solely for
-            marketing purposes. We, through this privacy policy statement,
+            >Phone numbers, email address and other contact information may be
+            collected on this website via our contact form and gathered solely
+            for marketing purposes. We, through this privacy policy statement,
             pledge to adhere strictly to protect client's right to privacy and
-            none of such information collected and gather on this website will
-            be share with third parties.</span
+            none of such information collected and gathered on this website will
+            be shared with third parties.</span
           >
         </p>
         <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
