--- a/concerts.html
+++ b/concerts.html
@@ -5,12 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Professional Stage Lights Supplier" />
     <meta name="description" content="Event Management" />
-    <meta name="description" content="LMV-PRO Lights" />
     <link rel="stylesheet" type="text/css" href="styles/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
     <link rel="icon" href="./img/logo.png" />
     <link rel="apple-touch-icon" href="./img/black_logo.png" />
-    <title>LMV Pro Lights || Concerts...</title>
+    <title>LMV Pro Lights || Lights, Camera, Action...</title>
   </head>
   <body>
     <header>
@@ -29,7 +28,7 @@
               </ul>
             </li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li>
               <a href="#">Gallery</a>
               <ul class="dropdown">
@@ -48,9 +47,10 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
       <li><a href="#">Gallery</a></li>
     </nav>
+
   <body>
     <main class="container" id="main-content">
         <div class="text-left" id="site-map3">
@@ -197,12 +197,12 @@
             <p class="popup" onclick="myFunction()">
               Privacy Policy
               <span class="popuptext" id="myPopup"
-                >Phone numbers, email address and other contact information maybe
-                collected on this website via our contact form and gather solely for
+                >Phone numbers, email address and other contact information may be
+                collected on this website via our contact form and gathered solely for
                 marketing purposes. We, through this privacy policy statement,
                 pledge to adhere strictly to protect client's right to privacy and
-                none of such information collected and gather on this website will
-                be share with third parties.</span
+                none of such information collected and gathered on this website will
+                be shared with third parties.</span
               >
             </p>
             <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
