--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               </ul>
             </li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li>
               <a href="#">Gallery</a>
               <ul class="dropdown">
@@ -52,7 +52,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="about.html">About Us</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
       <li><a href="#">Gallery</a></li>
     </nav>
 
@@ -140,12 +140,12 @@
         <p class="popup" onclick="myFunction()">
           Privacy Policy
           <span class="popuptext" id="myPopup"
-            >Phone numbers, email address and other contact information maybe
-            collected on this website via our contact form and gather solely for
-            marketing purposes. We, through this privacy policy statement,
+            >Phone numbers, email address and other contact information may be
+            collected on this website via our contact form and gathered solely
+            for marketing purposes. We, through this privacy policy statement,
             pledge to adhere strictly to protect client's right to privacy and
-            none of such information collected and gather on this website will
-            be share with third parties.</span
+            none of such information collected and gathere on this website will
+            be shared with third parties.</span
           >
         </p>
         <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
