--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
 
   <body>
     <main class="container" id="main-content">
-        <div class="text-left" id="site-map3">
+        <div class="text-left" id="site-map2">
           <p><a href="index.html">Home </a> | Contact Us</p>
         </div>
 
@@ -62,39 +62,20 @@
         >
           <h1>CONTACT US</h1>
         </div>
-  
-        <div class="service-btn text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <h4><a href="services.html">Get a Quote</a></h4>
-        </div>
 
-        <div id="featured-events">
-            <h2>We will love to hear from you</h2>
-        </div>
+        <div id="contact" class="col-lg-12">
+            <h3>We will love to hear from you</h3>
 
-        <div class="concert-tiles text-center">
-            <div class="concert col-lg-4 col-md-6">
-                <!-- <h3>Concerts</h3> -->
-                <a href="#"><img src="./img/Other Events/IMG_5005.jpg" alt="Concerts"></a>
-                <figcaption>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                    Perspiciatis totam autem omnis. Veniam nam autem temporibus cumque 
-                    ab provident natus quam, debitis accusamus at molestias eaque aliquid? 
-                    Iusto, numquam libero.</figcaption>
+            <div class="contact-tiles text-center col-lg-6">
+                    <a href="#"><img src="./img/facebook.png" alt="facebook"></a>
+                    <a href="#"><img src="./img/twitter.png" alt="twitter"></a>
+                    <a href="#"><img src="./img/instagram.png" alt="instagram"></a>
+                    <a href="#"><img src="./img/snapchat.png" alt="snapchat"></a>
+                    <a href="#"><img src="./img/email.png" alt="email"></a>
+                    <a href="#"><img src="./img/Telephone.png" alt="phone"></a>
             </div>
-            <div class="marriage col-lg-4 col-md-6">
-                <!-- <h3>Marriages</h3> -->
-                <a href="#"><img src="./img/Other Events/IMG_5013.jpg" alt="Marriages"></a>
-                <figcaption>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Error harum aliquid excepturi, mollitia numquam aut nulla repudiandae 
-                    vero expedita nemo, et similique, non amet reprehenderit autem quia 
-                    provident quis cumque?</figcaption>
-            </div>
-            <div class="others col-lg-4 col-md-12">
-                <!-- <h3>Other Events</h3> -->
-                <a href="#"><img src="./img/Other Events/IMG_5016.jpg" alt="Other Events"></a>
-                <figcaption>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Consectetur culpa sapiente et doloremque in asperiores, rem inventore 
-                    exercitationem! Iure enim nihil, quod animi tempora cupiditate sapiente 
-                    reiciendis porro quas magni.</figcaption>
+            <div class="location col-lg-6">
+                <a href="#">Location</a>
             </div>
         </div>
 
