--- a/contact.html
+++ b/contact.html
@@ -65,17 +65,20 @@
 
         <div id="contact" class="col-lg-12">
             <h3>We will love to hear from you</h3>
+        </div>
 
-            <div class="contact-tiles text-center col-lg-6">
-                    <a href="#"><img src="./img/facebook.png" alt="facebook"></a>
-                    <a href="#"><img src="./img/twitter.png" alt="twitter"></a>
-                    <a href="#"><img src="./img/instagram.png" alt="instagram"></a>
-                    <a href="#"><img src="./img/snapchat.png" alt="snapchat"></a>
-                    <a href="#"><img src="./img/email.png" alt="email"></a>
-                    <a href="#"><img src="./img/Telephone.png" alt="phone"></a>
+        <div class="contact-tiles text-center">
+            <div class="col-lg-4 col-md-6">
+              <h3>Our Social Media</h3>
+                <p id="contact-btn"></p>
             </div>
-            <div class="location col-lg-6">
-                <a href="#">Location</a>
+            <div class="col-lg-4 col-md-6">
+                <h3>Our Social Media</h3>
+                <p id="contact-btn"></p>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <h3>Our Location</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!4v1683581380619!6m8!1m7!1sUwPwcGyiI7gVl9xFVA7JFw!2m2!1d5.490228631268034!2d6.011815899964213!3f9.853622047244095!4f4.854330708661422!5f0.4000000000000002" width="360" height="140" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="location"></iframe>
             </div>
         </div>
 
