--- a/about.html
+++ b/about.html
@@ -255,7 +255,7 @@
             be shared with third parties.</span
           >
         </p>
-        <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
+        <p><a href="#">LMV-PRO Lights © 2023</a></p>
       </div>
     </footer>
   </body>
