--- a/concerts.html
+++ b/concerts.html
@@ -131,7 +131,8 @@
             </tbody>
           </table>
       </main>
-    <footer class="main-footer">
+      <footer class="main-footer">
+        <div class="container">
           <div class="sticky-whatsapp text-right col-lg-12">
             <a href="#" target="_blank"
               ><img src="img/whatsapp.png" alt="Sticky WhatsApp"
@@ -192,25 +193,26 @@
             <p>lorem ipsum lorem ipsum lorem ipsum</p>
             <p>lorem ipsum lorem ipsum lorem</p>
           </div>
+        </div>
   
-          <div class="copyright text-center col-lg-12">
-            <p class="popup" onclick="myFunction()">
-              Privacy Policy
-              <span class="popuptext" id="myPopup"
-                >Phone numbers, email address and other contact information may be
-                collected on this website via our contact form and gathered solely for
-                marketing purposes. We, through this privacy policy statement,
-                pledge to adhere strictly to protect client's right to privacy and
-                none of such information collected and gathered on this website will
-                be shared with third parties.</span
-              >
-            </p>
-            <p><a href="index.html">LMV-PRO Lights © 2023</a></p>
-          </div>
-        </footer>
-      </body>
-      <script type="text/javascript" src="js/bootstrap.min.js"></script>
-      <script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="javascript/script.js"></script>
-    </html>
-    
+        <div class="copyright text-center col-lg-12">
+          <p class="popup" onclick="myFunction()">
+            Privacy Policy
+            <span class="popuptext" id="myPopup"
+              >Phone numbers, email address and other contact information may be
+              collected on this website via our contact form and gathered solely
+              for marketing purposes. We, through this privacy policy statement,
+              pledge to adhere strictly to protect client's right to privacy and
+              none of such information collected and gathered on this website will
+              be shared with third parties.</span
+            >
+          </p>
+          <p><a href="#">LMV-PRO Lights © 2023</a></p>
+        </div>
+      </footer>
+    </body>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="javascript/script.js"></script>
+  </html>
+  
