--- a/contact.html
+++ b/contact.html
@@ -66,22 +66,38 @@
         <div id="contact" class="col-lg-12">
             <h3>We will love to hear from you</h3>
         </div>
-
-        <div class="contact-tiles text-center">
-            <div class="col-lg-4 col-md-6">
-              <h3>Our Social Media</h3>
-                <p id="contact-btn"></p>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <h3>Our Social Media</h3>
-                <p id="contact-btn"></p>
-            </div>
-            <div class="col-lg-4 col-md-12">
-                <h3>Our Location</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!4v1683581380619!6m8!1m7!1sUwPwcGyiI7gVl9xFVA7JFw!2m2!1d5.490228631268034!2d6.011815899964213!3f9.853622047244095!4f4.854330708661422!5f0.4000000000000002" width="360" height="140" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="location"></iframe>
-            </div>
+<section>
+        <div id="contact-form">
+        <form action="">
+          <label for="First Name">First Name  </label>
+          <input type="text" name="" id="firstname" placeholder="First Name"><br><br>
+          <label for="Last Name">Last Name</label>
+          <input type="text" name="" id="lastname" placeholder="Last Name"><br> <br>
+          <label for="">Email</label>
+          <input type="email" name="" id="email" placeholder="Email"> <br> <br>
+          <label for="">Phone Number</label>
+          <input type="tel" placeholder="Phone Number" id="number"> <br> <br>
+          <label for="">Leave a Message</label> <br>  
+          <input type="text" placeholder="Leave a Message" id="leave-a-message"> <br> <br>
+          <input type="submit">
+       </form>
         </div>
-
+        <div id="contact-form2">
+          <form action="">
+            <label for="First Name">First Name  </label>
+            <input type="text" name="" id="firstname" placeholder="First Name"><br><br>
+            <label for="Last Name">Last Name</label>
+            <input type="text" name="" id="lastname" placeholder="Last Name"><br> <br>
+            <label for="">Email</label>
+            <input type="email" name="" id="email" placeholder="Email"> <br> <br>
+            <label for="">Phone Number</label>
+            <input type="tel" placeholder="Phone Number" id="number"> <br> <br>
+            <label for="">Leave a Message</label> <br>  
+            <input type="text" placeholder="Leave a Message" id="leave-a-message"> <br> <br>
+            <input type="submit">
+         </form>
+          </div>
+          </section>
           <div class="more-service-info">
                     <h4>BRANDS THAT TRUST US</h4>
           </div>
@@ -192,8 +208,6 @@
         </div>
       </footer>
     </body>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="javascript/script.js"></script>
   </html>
   
