--- a/index.html
+++ b/index.html
@@ -330,10 +330,6 @@
                 ><img src="./gallery/pic_thumb_nails/thumbnail_01.jpg" />
                 <span> All </span></a
               >
-              <a
-                href="./gallery/pictures/concert_1.JPG"
-                data-lightbox="allGallery"
-              ></a>
 
               <a
                 href="./gallery/pictures/concert_2.JPG"
@@ -572,8 +568,10 @@
             </div>
             <div class="bar"><div class="bar-blue"></div></div>
           </div>
-          <div class="design-image col-md-6 col-sm-12">
-            <img src="./img/portfolio.jpg" alt="" class="img-responsive" />
+          <div class="portfolio-video col-md-6 col-sm-12">
+            <video autoplay loop controls>
+              <source src="./gallery/portfolio.mp4" />
+            </video>
           </div>
         </div>
       </div>
