--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <div class="social">
               <ul>
                 <li>
-                  <a href="#"
+                  <a href="https://facebook.com/rickofar" target="_blank"
                     ><img
                       src="./img/facebook-app-symbol.png"
                       alt="facebook"
@@ -117,12 +117,12 @@
                   /></a>
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="https://twitter.com/rickofar1" target="_blank"
                     ><img src="./img/twitter.png" alt="twitter" id="twitter"
                   /></a>
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="https://instagram.com/rickofar" target="_blank"
                     ><img
                       src="./img/instagram.png"
                       alt="instagram"
@@ -130,7 +130,7 @@
                   /></a>
                 </li>
                 <li>
-                  <a href="#"
+                  <a href="https://snapchat.com/add/rickofar" target="_blank"
                     ><img src="./img/snapchat.png" alt="snapchat" id="snapchat"
                   /></a>
                 </li>
@@ -264,7 +264,7 @@
               <h3>I Can Design Anything You Want</h3>
             </div>
             <div class="role-details">
-              <p>
+              <p id="hire-us">
                 Hello there! I'm a web designer, and I'm very passionate and
                 dedicated to my work. With 20 years experience as a professional
                 web developer, I have acquired the skills and knowledge
@@ -272,7 +272,7 @@
                 the design process, from discussion and collaboration.
               </p>
             </div>
-            <div class="hire" id="hire-us">
+            <div class="hire">
               <div class="hire-btn">
                 <a href="https://wa.me/2348179290343" target="_blank"
                   ><span>Hire Us</span></a
@@ -313,6 +313,7 @@
               <li><a href="#concert" class="links">Concerts</a></li>
               <li><a href="#wedding" class="links">Weddings</a></li>
               <li><a href="#others" class="links">Other Events</a></li>
+              <li><a href="#videos" class="links">Videos</a></li>
             </ul>
           </div>
         </div>
@@ -536,6 +537,29 @@
               ></a>
             </div>
           </div>
+
+          <div class="video-container">
+            <div class="video-gallery-wrapper">
+              <div class="video-list" id="videos">
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video src="./gallery/videos/vid_1.MP4" muted></video>
+              </div>
+
+              <div class="main-video">
+                <video src="./gallery/videos/vid_1.MP4" muted controls></video>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="paint">
@@ -558,18 +582,18 @@
             </div>
             <div class="bar"><div class="bar-orange"></div></div>
             <div>
-              <span class="marker">Weddings</span
+              <span class="marker">Other Events</span
               ><span class="wedding-number">95%</span>
             </div>
             <div class="bar"><div class="bar-green"></div></div>
             <div>
-              <span class="marker">Other Events</span
+              <span class="marker">Weddings</span
               ><span class="others-number">75%</span>
             </div>
             <div class="bar"><div class="bar-blue"></div></div>
           </div>
           <div class="portfolio-video col-md-6 col-sm-12">
-            <video autoplay loop controls>
+            <video loop controls>
               <source src="./gallery/portfolio.mp4" />
             </video>
           </div>
