--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               <a
                 href="./gallery/pictures/concert_1.JPG"
                 data-lightbox="allGallery"
-                ><img src="./gallery/pic_thumb_nails/thumbnail_01.jpg" />
+                ><img src="./gallery/pic_thumb_nails/thumbnail_01.JPG" />
                 <span> All </span></a
               >
 
