--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@
                 <video src="./gallery/videos/vid_1.MP4" muted controls></video>
               </div>
             </div>
+            <span>Videos</span>
           </div>
         </div>
 
