--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
               </p>
             </div>
             <div class="hire">
-              <div class="hire-btn">
+              <div class="hire-btn" onmouseover="transparent()">
                 <a href="https://wa.me/2348179290343" target="_blank"
                   ><span>Hire Us</span></a
                 >
@@ -459,6 +459,18 @@
                 href="./gallery/pictures/concert_8.JPG"
                 data-lightbox="ourGallery"
               ></a>
+              <a
+                href="./gallery/pictures/concert_9.jpg"
+                data-lightbox="ourGallery"
+              ></a>
+              <a
+                href="./gallery/pictures/concert_10.jpg"
+                data-lightbox="ourGallery"
+              ></a>
+              <a
+                href="./gallery/pictures/concert_11.jpg"
+                data-lightbox="ourGallery"
+              ></a>
             </div>
 
             <!-- wedding -->
@@ -540,26 +552,112 @@
 
           <div class="video-container">
             <div class="video-gallery-wrapper">
+              <div class="playlist">
+                <span id="play_list">Playlist</span>
+              </div>
               <div class="video-list" id="videos">
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
-                <video src="./gallery/videos/vid_1.MP4" muted></video>
+                <video
+                  src="./gallery/videos/vid_1.MP4"
+                  muted
+                  class="active-video"
+                ></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_5.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_6.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_7.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_8.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_9.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_10.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_11.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_13.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_14.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_15.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_16.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_17.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_18.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_21.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_23.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_24.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_25.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_26.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_27.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_28.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_30.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_31.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_32.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_33.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_35.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_36.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_37.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
+
+                <video src="./gallery/videos/vid_38.MP4" muted></video>
+                <!-- <span>Video's Caption</span> -->
               </div>
 
               <div class="main-video">
-                <video src="./gallery/videos/vid_1.MP4" muted controls></video>
+                <video
+                  src="./gallery/videos/vid_1.MP4"
+                  autoplay
+                  muted
+                  controls
+                ></video>
               </div>
             </div>
-            <span>Videos</span>
+            <span class="video-title">Videos</span>
           </div>
         </div>
 
