--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@
 		<div class="contact-section" id="contact">
 			<div class="contact-head">
 				<span>Contact Us</span>
-				<h3>We love to hear from You</h3>
+				<h4>We love to hear from You</h4>
 				<!-- <p>
 					Please fill out the form on this section to contact with me. Or call
 					between 9:00 a.m. and 8:00 p.m. ET, Monday through Fridays
@@ -1325,7 +1325,7 @@
 					<ul>
 						<li>
 							<div class="address">
-								<img src="./img/location.png" alt="" />
+								<img src="./img/logos/flat_location_logo.png" alt="" />
 								<div class="address-details">
 									<h3>Address</h3>
 									<p>1 Okishone Street, Agbarho</p>
@@ -1334,7 +1334,7 @@
 						</li>
 						<li>
 							<div class="email">
-								<img src="./img/email.png" alt="" />
+								<img src="./img/logos/email.png" alt="" />
 								<div class="email-details">
 									<h3>Email</h3>
 									<p>
@@ -1347,7 +1347,10 @@
 						</li>
 						<li>
 							<div class="phone">
-								<img src="./img/phone.png" alt="" />
+								<img
+									src="./img/logos/Telephone-PNG-Background-Image-279x279.png"
+									alt=""
+								/>
 								<div class="phone-details">
 									<h3>Phone</h3>
 									<p><a href="tel:2347017003715"> +234(0)701-700-3715</a></p>
@@ -1376,7 +1379,7 @@
 									no-repeat 1.5em center;
 								background-size: 1.6em;
 							"
-							>Contact con WhatsApp</a
+							>Contact us on WhatsApp</a
 						>
 					</div>
 					<!-- <form action="">
